--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ button {
   border-radius: 5px;
 }
 .btn {
-  font-weight: 700;
+  cursor: pointer;;
   font-family: inherit;
   color: #fefefe;
   background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
@@ -86,20 +86,20 @@ button {
 .btn:hover {
   font-family: inherit;
   color: #fefefe;
-  background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
-  background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
-  background-color: rgba(255, 255, 255, 0.5);
-  -webkit-box-shadow: inset 0 2px 2px 0 #ac1000;
-  -webkit-box-shadow: 0 1px 2px 0 #ac1000;
-          box-shadow: inset 0 2px 2px 0 #ac1000;
-          box-shadow: 0 1px 2px 0 #ac1000;
+  background: #f17b64;
+  box-shadow: inset 0px -2px 2px #ac1000;
 }
+
 .btn:active {
-  font-family: inherit;
+ font-family: inherit;
   color: #fefefe;
-  background: -webkit-gradient(linear, left bottom, left top, from(#f26843), to(#e74a35));
-  background: linear-gradient(0deg, #f26843 0%, #e74a35 100%);
-  background-color: rgba(0, 0, 0, 0.07);
+  box-shadow: inset 0 2px 2px #942718;
+  background-image: -moz-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
+    background-color: rgba(0, 0, 0, 0.07);
+}
+
 }
 .type-text:focus {
   font-weight: 700;
@@ -222,11 +222,18 @@ button {
 
   border-radius: 30px;
 }
-.signin-popup a {
+.signin-links a {
   font-weight: 400;
   font-size: 13px;
   line-height: 24px;
   color: #323232;
+}
+.links {
+color: #323232;
+}
+.links:hover,
+.links:active {
+  color: #e84d37;
 }
 .shipcart-popup {
   width: 539px;
@@ -430,4 +437,43 @@ button {
   -webkit-box-pack: center;
   -ms-flex-align: center;
   -ms-flex-pack: center;
+}
+.seo-header{
+  font-size: 24px;
+  color: rgb(50, 50, 50);
+  line-height: 1.25;
+  text-align: left;
+
+}
+.seo-content {
+  font-size: 16px;
+  color: rgb(50, 50, 50);
+  line-height: 1.375;
+  text-align: left;
+}
+.news-header {
+  font-size: 16px;
+  color: rgb(50, 50, 50);
+  line-height: 1.375;
+  text-align: left;
+}
+.news-content {
+  font-size: 16px;
+  color: rgb(90, 90, 90);
+  line-height: 1.375;
+  text-align: left;
+}
+.address-content {
+  font-size: 14px;
+  color: rgb(50, 50, 50);
+  line-height: 1.429;
+  text-align: left;
+}
+.address-content b{
+  font-size: 18px;
+  color: rgb(50, 50, 50);
+  font-weight: bold;
+  line-height: 1.333;
+  text-align: left;
+
 }
