--- a/css/style.css
+++ b/css/style.css
@@ -75,32 +75,45 @@ button {
   border-radius: 5px;
 }
 .btn {
-  cursor: pointer;;
   font-family: inherit;
   color: #fefefe;
   background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
   -webkit-box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
           box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
+  cursor: pointer;;
 }
 .btn:hover {
   font-family: inherit;
   color: #fefefe;
+
   background: #f17b64;
-  box-shadow: inset 0px -2px 2px #ac1000;
+  -webkit-box-shadow: inset 0 -2px 2px #ac1000;
+          box-shadow: inset 0 -2px 2px #ac1000;
 }
 
 .btn:active {
- font-family: inherit;
+  font-family: inherit;
   color: #fefefe;
-  box-shadow: inset 0 2px 2px #942718;
-  background-image: -moz-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
-  background-image: -webkit-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
+  background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
+  background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
+  background-color: rgba(0, 0, 0, 0.07);
   background-image: -ms-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
-    background-color: rgba(0, 0, 0, 0.07);
+  -webkit-box-shadow: inset 0 2px 2px #942718;
+          box-shadow: inset 0 2px 2px #942718;
+}
+.links {
+  -webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
+          box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
+}
+.links:hover,
+.links:active {
+  color: #e84d37;
+
+  -webkit-box-shadow: 0 1px 0 0 rgba(232, 77, 55, 0.2);
+          box-shadow: 0 1px 0 0 rgba(232, 77, 55, 0.2);
 }
 
-}
 .type-text:focus {
   font-weight: 700;
   font-size: 16px;
@@ -112,6 +125,9 @@ button {
 .menu-item a {
   color: #ffffff;
   text-decoration: none;
+
+  -webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
+          box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
 }
 .menu-item > a:hover {
   color: #323232;
@@ -154,19 +170,30 @@ button {
 .active-item a:hover {
   color: #323232;
 }
-.search-block a {
-  font-weight: 400;
-  font-size: 16px;
-  color: #ffffff;
-  text-decoration: none;
-
+.link-search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: rgba(255, 255, 255, 0.2);
+  width: 33px;
+  height: 33px;
+  border-radius: 50%;
 }
-.search-block a:hover {
+.link-search:hover {
   color: black;
 
   background-color: #f8f7f4;
 }
+.link-search:hover .search-svg-path{
+  fill: #323232;
+}
+
 .search-form {
   width: 341px;
   height: 84px;
@@ -189,13 +216,16 @@ button {
 
   background-color: rgba(255, 255, 255, 0.2);
 }
-.profile-signin a:hover {
+.signin-link:hover {
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
   color: #323232;
 
   background-color: #f8f7f4;
+}
+.signin-link:hover .signin-svg{
+  fill: #000000;
 }
 .signin-popup {
   width: 277px;
@@ -228,13 +258,7 @@ button {
   line-height: 24px;
   color: #323232;
 }
-.links {
-color: #323232;
-}
-.links:hover,
-.links:active {
-  color: #e84d37;
-}
+
 .shipcart-popup {
   width: 539px;
   height: 242px;
@@ -295,6 +319,20 @@ color: #323232;
   border-radius: 30px;
   -webkit-box-shadow: 0 1px 2px 0 #ac1000;
           box-shadow: 0 1px 2px 0 #ac1000;
+}
+.link-search:hover {
+  color: black;
+
+  background-color: #f8f7f4;
+}
+
+.link-search:hover .search-svg-path{
+  fill: #323232;
+}
+
+
+.shipcart-link:hover shipcart-svg{
+  fill: #000000;
 }
 .time-work b {
   font-weight: 700;
@@ -415,6 +453,9 @@ color: #323232;
   line-height: 14.441px;
   text-align: center;
   color: #ffffff;
+
+  -webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
+          box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
 }
 .catalog-invisible-button {
   display: -webkit-box;
@@ -438,42 +479,220 @@ color: #323232;
   -ms-flex-align: center;
   -ms-flex-pack: center;
 }
-.seo-header{
+.seo-header {
   font-size: 24px;
-  color: rgb(50, 50, 50);
   line-height: 1.25;
   text-align: left;
-
+  color: rgb(50, 50, 50);
 }
 .seo-content {
   font-size: 16px;
-  color: rgb(50, 50, 50);
   line-height: 1.375;
   text-align: left;
+  color: rgb(50, 50, 50);
+}
+.news-block {
+  background-color: #ffffff;
 }
 .news-header {
   font-size: 16px;
-  color: rgb(50, 50, 50);
   line-height: 1.375;
   text-align: left;
+  color: rgb(50, 50, 50);
+}
+.news-link {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  text-align: left;
+  color: #323232;;
+}
+.news-item:last-child {
+  background-color: #e5e5e5;
 }
 .news-content {
   font-size: 16px;
-  color: rgb(90, 90, 90);
   line-height: 1.375;
   text-align: left;
+  color: rgb(90, 90, 90);
+}
+.subscribe-button {
+  width: 129px;
+  height: 44px;
+
+  border-radius: 30px;
+}
+.address-block {
+  width: 302px;
+  height: 305px;
+
+  background-color: rgba(255, 255, 255, 0.98);
+  border-radius: 15px;
 }
 .address-content {
+  font-weight: 400;
   font-size: 14px;
-  color: rgb(50, 50, 50);
-  line-height: 1.429;
+  line-height: 20px;
   text-align: left;
-}
-.address-content b{
-  font-size: 18px;
   color: rgb(50, 50, 50);
+}
+.address-content b {
   font-weight: bold;
+  font-size: 18px;
   line-height: 1.333;
   text-align: left;
+  color: rgb(50, 50, 50);
+}
+.callback-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 252px;
+  height: 44px;
 
+  text-decoration: none;
+
+  border-radius: 30px;
+
+  -webkit-box-align: center;
+  -webkit-box-pack: center;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+}
+.social-item img {
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+}
+.social-item a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  -webkit-box-align: center;
+  -webkit-box-pack: center;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+}
+.footer-menu a {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 18px;
+  color: #ffffff;
+  text-decoration: none;
+}
+.footer-menu a:first-of-type {
+  font-weight: 700;
+}
+.footer-banner p {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  text-align: left;
+  color: #fefefe;
+}
+.footer-banner a {
+  color: #ffffff;
+  text-decoration: none;
+}
+.popup-callback {
+  border-radius: 10px;
+  background-color:  #f8f7f4;
+  width: 478px;
+  height: 443px;
+}
+.callback-header {
+  color:  #323232;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+  text-align: left;
+}
+.callback-name .type-text {
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-color:  rgba(178, 178, 178, 52);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color:  #ffffff;
+  width: 267px;
+  height: 44px;
+  font-family: Roboto;
+  color:  #999999;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+.callback-mail .type-text {
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-color:  rgba(178, 178, 178, 52);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color:  #ffffff;
+  width: 267px;
+  height: 44px;
+  font-family: Roboto;
+  color:  #999999;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+.callback-area .type-text {
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-color:  rgba(178, 178, 178, 52);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color:  #ffffff;
+  width: 428px;
+  height: 155px;
+  font-family: Roboto;
+  color:  #999999;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+.callback-submit {
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
+          box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
+  width: 139px;
+  height: 44px;
+  border-radius: 30px;
+}
+.filters-header {
+  color:  #ffffff;
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 41px;
+  text-align: left;
+}
+.fieldset {
+  font-family: Roboto;
+  color:  #ffffff;
+  font-size: 14px;/* Приближение из-за подстановки шрифтов */
+  font-weight: 500;
+  line-height: 16px;/* Приближение из-за подстановки шрифтов */
+  text-align: left;
+  border: none;
+}
+.filter-sort select{
+  background-color:  rgba(248, 247, 244, 0.2);
+  width: 194px;
+  height: 37px;
+  border-radius: 30px;
+  font-family: Roboto;
+  color:  #ffffff;
+  font-size: 16px;;
+  line-height: 18px;
+  text-align: left;
 }
