--- a/css/style.css
+++ b/css/style.css
@@ -174,23 +174,25 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: rgba(255, 255, 255, 0.2);
+  justify-content: center;
+  align-items: center;
   width: 33px;
   height: 33px;
+
+  background-color: rgba(255, 255, 255, 0.2);
   border-radius: 50%;
+
+  -webkit-box-align: center;
+  -webkit-box-pack: center;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
 }
 .link-search:hover {
   color: black;
 
   background-color: #f8f7f4;
 }
-.link-search:hover .search-svg-path{
+.link-search:hover .search-svg-path {
   fill: #323232;
 }
 
@@ -224,7 +226,7 @@ button {
 
   background-color: #f8f7f4;
 }
-.signin-link:hover .signin-svg{
+.signin-link:hover .signin-svg {
   fill: #000000;
 }
 .signin-popup {
@@ -320,20 +322,38 @@ button {
   -webkit-box-shadow: 0 1px 2px 0 #ac1000;
           box-shadow: 0 1px 2px 0 #ac1000;
 }
-.link-search:hover {
-  color: black;
-
-  background-color: #f8f7f4;
+.shipcart-full-bg {
+  background-color: rgba(248, 247, 244, 0.99);
 }
-
-.link-search:hover .search-svg-path{
-  fill: #323232;
-}
-
-
-.shipcart-link:hover shipcart-svg{
+.shipcart-full {
   fill: #000000;
 }
+.shipcart-total-empty {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: right;
+  color: #ffffff;
+}
+.shipcart-total {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: right;
+  color: #323232;
+}
+.item-shipcart:hover .shipcart-icon {
+  fill: #000000;
+}
+.item-shipcart:hover .shipcart-total-empty {
+  color: #323232;
+}
+.link-search {
+  color: black;
+
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
 .time-work b {
   font-weight: 700;
   font-size: 14px;
@@ -348,6 +368,16 @@ button {
   color: #ffffff;
   text-decoration: none;
 }
+.breadcrumbs-item a {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  font-family: Roboto;
+  text-align: left;
+  color: #ffffff;
+  text-decoration: none;
+}
+
 .slider p {
   font-weight: 700;
   font-size: 60px;
@@ -599,100 +629,191 @@ button {
   text-decoration: none;
 }
 .popup-callback {
-  border-radius: 10px;
-  background-color:  #f8f7f4;
   width: 478px;
   height: 443px;
+
+  background-color: #f8f7f4;
+  border-radius: 10px;
 }
 .callback-header {
-  color:  #323232;
-  font-size: 24px;
   font-weight: 500;
+  font-size: 24px;
   line-height: 28px;
   text-align: left;
+  color: #323232;
 }
 .callback-name .type-text {
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  border-color:  rgba(178, 178, 178, 52);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color:  #ffffff;
   width: 267px;
   height: 44px;
-  font-family: Roboto;
-  color:  #999999;
-  font-size: 16px;
+
   font-weight: 400;
+  font-size: 16px;
   line-height: 24px;
+  font-family: Roboto;
   text-align: left;
+  color: #999999;
+
+  background-color: #ffffff;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(178, 178, 178, 52);
+  border-radius: 5px;
 }
 .callback-mail .type-text {
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  border-color:  rgba(178, 178, 178, 52);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color:  #ffffff;
   width: 267px;
   height: 44px;
-  font-family: Roboto;
-  color:  #999999;
-  font-size: 16px;
+
   font-weight: 400;
+  font-size: 16px;
   line-height: 24px;
+  font-family: Roboto;
   text-align: left;
+  color: #999999;
+
+  background-color: #ffffff;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(178, 178, 178, 52);
+  border-radius: 5px;
 }
 .callback-area .type-text {
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  border-color:  rgba(178, 178, 178, 52);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color:  #ffffff;
   width: 428px;
   height: 155px;
-  font-family: Roboto;
-  color:  #999999;
-  font-size: 16px;
+
   font-weight: 400;
+  font-size: 16px;
   line-height: 24px;
+  font-family: Roboto;
   text-align: left;
+  color: #999999;
+
+  background-color: #ffffff;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(178, 178, 178, 52);
+  border-radius: 5px;
 }
 .callback-submit {
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
-          box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
   width: 139px;
   height: 44px;
+
   border-radius: 30px;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
+          box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
 }
 .filters-header {
-  color:  #ffffff;
-  font-size: 35px;
   font-weight: 700;
+  font-size: 35px;
   line-height: 41px;
   text-align: left;
+  color: #ffffff;
 }
 .fieldset {
-  font-family: Roboto;
-  color:  #ffffff;
-  font-size: 14px;/* Приближение из-за подстановки шрифтов */
   font-weight: 500;
-  line-height: 16px;/* Приближение из-за подстановки шрифтов */
+  font-size: 14px;
+  line-height: 16px;
+  font-family: Roboto;
   text-align: left;
+  color: #ffffff;
+
   border: none;
 }
-.filter-sort select{
-  background-color:  rgba(248, 247, 244, 0.2);
+.filter-sort select {
   width: 194px;
   height: 37px;
-  border-radius: 30px;
-  font-family: Roboto;
-  color:  #ffffff;
-  font-size: 16px;;
+
+  font-size: 16px;
   line-height: 18px;
+  font-family: Roboto;
   text-align: left;
+  color: #ffffff;
+
+  background-color: rgba(248, 247, 244, 0.2);
+  border-radius: 30px;;
+}
+.catalog-form-submit {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 144px;
+  height: 37px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  font-family: Roboto;
+  color: #ffffff;
+
+  background-color: rgba(255, 255, 255, 0.19);
+  border-width: 2px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-radius: 30px;
+  cursor: pointer;
+}
+.catalog-form-submit:hover {
+  color: #323232;
+
+  background-color: #ffffff;
+}
+.catalog-form-submit:active {
+  color: #323232;
+
+  background-color: #ededed;
+  border: none;
+  -webkit-box-shadow: inset 0 2px 2px #0000004f;
+          box-shadow: inset 0 2px 2px #0000004f;
+}
+.page-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.page-item {
+  display: inherit;
+  justify-content: center;
+  align-items: center;
+  width: 27px;
+  height: 26px;
+
+  border-radius: 50%;
+
+  -webkit-box-align: center;
+  -webkit-box-pack: center;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+}
+.page-item a {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  color: #ffffff;
+  text-decoration: none;
+}
+.active-page {
+  background-color: #ffffff;
+}
+.active-page a {
+  color: #323232;
+}
+.page-item:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.page-item:hover a {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  color: #ffffff;
+  text-decoration: none;
+}
+.page-item:active {
+  background-color: #ffffff;
+}
+.page-item:active a {
+  color: #323232;
 }
