--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ button {
 .btn {
   font-family: inherit;
   color: #fefefe;
+
   background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
   -webkit-box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
@@ -95,6 +96,7 @@ button {
 .btn:active {
   font-family: inherit;
   color: #fefefe;
+
   background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
   background-color: rgba(0, 0, 0, 0.07);
@@ -139,7 +141,7 @@ button {
 }
 
 .popup-menu-list {
-  width: 143px;
+  width: 104px;
   height: 171px;
 
   background-color: #f8f7f4;
@@ -208,6 +210,7 @@ button {
 .search-form .type-text {
   width: 311px;
   height: 44px;
+  padding-left: 14px;
 }
 .profile-signin a {
   font-weight: 500;
@@ -230,8 +233,11 @@ button {
   fill: #000000;
 }
 .signin-popup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 277px;
-  height: 214px;
+  height: 213px;
 
   background-color: #f8f7f4;
   border-radius: 5px;
@@ -244,21 +250,29 @@ button {
           box-sizing: border-box;
   width: 241px;
   height: 44px;
+  padding-left: 15px;
+
+  font-family: "Roboto", Arial, sans-serif;
 
   background-color: #ffffff;
 }
 
 .signin-button {
-  width: 100px;
-  height: 44px;
+  width: 101px;
+  height: 43px;
 
-  border-radius: 30px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 47px;
+
+  border-radius: 19px;
 }
 .signin-links a {
   font-weight: 400;
   font-size: 13px;
-  line-height: 24px;
+  line-height: 21px;
   color: #323232;
+  text-decoration: none;
 }
 
 .shipcart-popup {
@@ -316,6 +330,7 @@ button {
   font-family: inherit;
   color: #fefefe;
   color: #fefefe;
+
   background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
   border-radius: 30px;
@@ -409,6 +424,7 @@ button {
   text-decoration: none;
   text-shadow: none;
   text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+
   background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
   -webkit-box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
@@ -816,4 +832,37 @@ button {
 }
 .page-item:active a {
   color: #323232;
+}
+
+
+/* flexbox*/
+
+.signin-popup-inner {
+  display: flex;
+  height: 90%;
+}
+.signin-links {
+  display: flex;
+  flex-direction: column;
+  width: 120px;
+}
+.signin-main-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 45px;
+}
+
+.search-form {
+  display: flex;
+  flex-basis: auto;
+  justify-content: center;
+  align-items: center;
 }
