--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ body {
 .page-list,
 .footer-social {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 button {
@@ -123,47 +125,87 @@ button {
   font-family: Roboto;
   color: #323232;
 }
+.menu-list {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
 
 .menu-item a {
   color: #ffffff;
+  border-radius: 30px;
+  padding: 10px 15px;
   text-decoration: none;
 
-  -webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
-          box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
 }
 .menu-item > a:hover {
+  border-radius: 30px;
+  padding: 10px 15px;
   color: #323232;
 
   background-color: #f7f6f3;
+}
+.menu-link span {
+  -webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
+          box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
 }
 .menu-item > a:active {
   background-color: #f6b5a5;
 }
 
 .popup-menu-list {
-  width: 104px;
-  height: 171px;
-
-  background-color: #f8f7f4;
+  /*display: none;*/
+  position: absolute;
+  width: 143px;
+  top: 57px;
+  left: 256px;
   border-radius: 5px;
-  -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
-          box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+  list-style: none;
+  background-color: #f8f7f4;
+  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.4);
 }
 .popup-menu-item a {
-  font-weight: 400;
+  display: block;
+  height: 100%;
+  font-family: Roboto;
+  text-decoration: none;
+  color: #333333;
   font-size: 14px;
+  font-weight: 400;
   line-height: 16px;
-  color: #000000;
+    padding-top: 8px;
+  padding-bottom: 9px;
 }
 .popup-menu-item:first-child a {
-  font-weight: bold;
+  display: block;
+height: 100%;
+font-family: Roboto;
+text-decoration: none;
+color: #333333;
+font-size: 14px;
+font-weight: 400;
+line-height: 17px;
+font-weight: 700;
+padding-left: 20px;
+padding-top: 12px;
+padding-bottom: 10px;
+}
+.popup-menu-item:first-child:hover{
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  background: #fbded7
+}
+/*
+.popup-menu-item:first-child:hover {
+  border-radius: 5px 5px 0 0;
 }
 .popup-menu-item a:hover {
-  background-color: rgba(251, 222, 215, 0.2);
+      background-color: #fbded7;
 }
 .popup-menu-item a:active {
   background-color: #f6b5a5;
 }
+*/
 .active-item {
   color: #ffffff;
 
@@ -836,6 +878,23 @@ button {
 
 
 /* flexbox*/
+body {
+  display: flex;
+  flex-direction: column;
+}
+.header-wrap {
+  margin: 0 auto;
+  max-width: 1200px;
+  display: flex;
+
+}
+.header-item1{
+  width: 560px;
+}
+.header-item2{
+  width: 267px;
+}
+
 
 .signin-popup-inner {
   display: flex;
