--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,13 @@ body {
   padding: 0;
   margin: 0;
 }
-
+table{
+  border-spacing: 0;
+}
 button {
   margin: 0;
   padding: 0;
-
+  cursor: pointer;
   background-color: none;
   border: 0;
 }
@@ -51,31 +53,6 @@ button {
 
   -webkit-clip-path: inset(100%);
 }
-/*.type-text {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  color: #999999;
-  padding: 8px 0 9px 20px;
-  background-color: #ffffff;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgba(178, 178, 178, 52);
-  border-radius: 5px;
-}
-.type-text:hover {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-
-  background-color: #ffffff;
-  border-width: 2px;
-  border-style: solid;
-  border-color: rgba(154, 154, 154, 52);
-  border-radius: 5px;
-}*/
 .btn {
   font-family: inherit;
   color: #fefefe;
@@ -131,16 +108,21 @@ button {
       -ms-flex-pack: justify;
           justify-content: space-between;
   list-style: none;
+  align-items: center;
 }
 
-.menu-item > a {
+.menu-link {
   color: #ffffff;
   border-radius: 30px;
   padding: 10px 15px;
   text-decoration: none;
+  font-family: Roboto;
+font-size: 16px;
+font-weight: 700;
+line-height: 18px;
 
 }
-.menu-item > a:hover {
+.menu-link:hover {
   border-radius: 30px;
   padding: 10px 15px;
   color: #323232;
@@ -157,7 +139,9 @@ button {
 .menu-item:hover .popup-menu-list{
   display: block;
 }
-
+.menu-item:not(:first-child) {
+  margin-bottom: 8px;
+}
 .popup-menu-list {
   display: none;
   position: absolute;
@@ -246,54 +230,64 @@ button {
 .link-search:hover .search-svg-path {
   fill: #323232;
 }
-
+.search-block:hover .search-form-wrap {
+  display: block;
+}
 .search-form-wrap {
-
+  display: none;
+  position: absolute;
+  z-index: 1;
   padding: 20px;
-  width: 301px;
-      padding: 20px 25px 20px 15px;
+  width: 327px;
+  padding: 20px 0 20px 15px;
   background-color: #f8f7f4;
-  border-radius: 5px;
+  border-radius: 6px;
   -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
-          box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 }
-/*.search-form .type-text {
-  width: 311px;
-  height: 44px;
-  padding-left: 14px;
-}
-*/
+
+
 .search-form {
   display: block;
     height: 100%;
+    width: 100%;
     overflow: hidden;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 .form-search-input {
   font-family: Roboto;
-  color: #999999;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  text-align: left;
-    padding: 9px 0 9px 12px;  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #d3d3d2;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  background-color: #ffffff;
-  width: 239px;
+     color: #999999;
+     font-size: 14px;
+     font-weight: 400;
+     line-height: 24px;
+     text-align: left;
+     padding: 8px 0px 11px 13px;
+     border-radius: 5px;
+     border-style: solid;
+     border-width: 1px;
+     border-color: #d3d3d2;
+     -webkit-box-sizing: border-box;
+     box-sizing: border-box;
+     background-color: #ffffff;
+     width: 311px;
+
 }
-.profile-signin a {
+.profile-signin > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
   color: #ffffff;
   text-decoration: none;
-
+  padding: 7px 16px;
+      border-radius: 30px;
   background-color: rgba(255, 255, 255, 0.2);
+}
+.signin-txt {
+  margin-left: 7px;
 }
 .signin-link:hover {
   font-weight: 500;
@@ -312,6 +306,8 @@ button {
 }
 .signin-popup {
   display: none;
+  position: absolute;
+  z-index: 1;
   width: 239px;
   height: 173px;
     padding: 20px 19px 21px 19px;
@@ -363,43 +359,36 @@ button {
 
   border-radius: 19px;
 }
-.button-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.button-cont {
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-
-}
-
-.signin-links a {
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 21px;
-  color: #323232;
-  text-decoration: none;
+height: 100%;
 }
 
 .shipcart-popup {
-  width: 539px;
-  height: 242px;
-
+  width: 522px;
+  padding: 7px 3px 5px 15px;
+  position: absolute;
+  z-index: 1;
+  right: 200px;
   background-color: #f8f7f4;
   border-radius: 5px;
   -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
           box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 }
+.shipcart-table {
+  border-spacing: 0 15px;
+  box-shadow: 0 1px 0 rgba(153, 153, 153, 0.2);
+}
 .item-shipcart a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 400;
-  font-size: 16px;
   color: #ffffff;
   text-decoration: none;
-
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.2);
+  padding: 5px 34px 6px 16px;
+  border-radius: 30px;
 }
 .shipcart-rows {
   font-weight: 400;
@@ -423,7 +412,14 @@ button {
   text-align: left;
   color: #999999;
 }
-.shipcart-totals b {
+
+.shipcart-foo {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 16px 11px;
+}
+.rows-total b {
   font-weight: 700;
   font-size: 15px;
   line-height: 18px;
@@ -445,6 +441,9 @@ button {
   -webkit-box-shadow: 0 1px 2px 0 #ac1000;
           box-shadow: 0 1px 2px 0 #ac1000;
 }
+.rows-submit {
+  margin-top: 10px;
+}
 .shipcart-full-bg {
   background-color: rgba(248, 247, 244, 0.99);
 }
@@ -454,9 +453,17 @@ button {
 .shipcart-total-empty {
   font-weight: 500;
   font-size: 14px;
+  font-family: "Roboto";
   line-height: 16px;
-  text-align: right;
   color: #ffffff;
+  margin-left: 7px;
+}
+.shipcart-link:hover {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    color: #323232;
+    background-color: #f8f7f4;
 }
 .shipcart-total {
   font-weight: 500;
@@ -464,6 +471,40 @@ button {
   line-height: 16px;
   text-align: right;
   color: #323232;
+}
+.shipcart-btn-remove {
+  cursor: pointer;
+  background-color: #f8f7f4;
+}
+.shipcart-rows {
+  text-align: left;
+  vertical-align: baseline;
+}
+
+.shipcart-totals {
+  text-align: right;
+}
+.shipcart-button-submit {
+  text-align: right;
+}
+.shipcart-position-remove{
+}
+.shipcart-position-img {
+  width: 33px;
+  height: 33px;
+ padding-left: 13px;
+}
+.shipcart-position-artical{
+  width: 217px;
+  padding-left: 12px;
+}
+.shipcart-position-weight {
+  width: 111px;
+  padding-left: 29px;
+}
+.shipcart-position-price {
+  width: 72px;
+  padding-left: 11px;
 }
 .item-shipcart:hover .shipcart-icon {
   fill: #000000;
@@ -479,6 +520,12 @@ button {
 .search-block:hover .search-form {
   display: block;
 }
+.time-work {
+  position: absolute;
+  top: 100px;
+  text-align: right;
+}
+
 .time-work b {
   font-weight: 700;
   font-size: 14px;
@@ -942,7 +989,22 @@ button {
 .page-item:active a {
   color: #323232;
 }
+.filter-form {
+  font-size: 14px;
+  font-family: "Roboto";
+  color: rgb( 255, 255, 255 );
+  line-height: 1.143;
+  text-align: left;
+}
+.filter-value {
+    font-size: 14px;
+    font-family: "Roboto";
+    color: rgb( 255, 255, 255 );
+    line-height: 1.143;
+    text-align: left;
 
+    z-index: 1;
+}
 
 /* flexbox*/
 
@@ -952,26 +1014,29 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
 
-}
-.header-item1{
-  width: 560px;
 }
 .header-item2{
-  width: 267px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+height: 100%;}
+.header-icon {
+  display: flex;
+      justify-content: space-around;
+      align-items: center;
 }
 
-
-.signin-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+.popup-links a{
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 21px;
+  color: #323232;
+  text-decoration: none;
   width: 120px;
-  padding-bottom: 4px;
+  padding-bottom: 4px;*/
 }
 .form-email {
   display: block;
@@ -987,8 +1052,4 @@ button {
   overflow: hidden;
 -webkit-box-sizing: border-box;
         box-sizing: border-box;
-}
-
-
-.search-form {
 }
